--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+}
+.stroke-text {
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: gray;
+}
+
+.btn{
+  background-color: aliceblue;
+  font-weight: bold;
+  border: none;
+  padding: 0.5rem;
+  transition: 300ms all;
+  display: flex;
+  justify-content: center;
+}
+.btn:hover{
+  cursor: pointer;
 }
 
 .App-logo {
